<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads= "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/berlin"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/id_trial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/trial_test"
        android:layout_above="@+id/id_start"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/id_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_states"
        android:layout_centerInParent="true"
        android:textAllCaps="false"
        android:text="@string/general_question" />

    <Button
        android:id="@+id/id_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_info"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="@string/question_states" />

    <Button
        android:id="@+id/id_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_privacypolicy"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="@string/Info_test" />

    <Button
        android:id="@+id/id_privacypolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/id_exit"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="Privacy Policy" />

    <Button
        android:id="@+id/id_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView_main"
        android:layout_centerHorizontal="true"
        android:text="@string/exit" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_1">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>